<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bikram.cvbuilder.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_about_me"
        android:name="com.bikram.cvbuilder.ui.aboutme.AboutMeFragment"
        android:label="@string/title_about_me"
        tools:layout="@layout/fragment_about_me" />

    <fragment
        android:id="@+id/navigation_work"
        android:name="com.bikram.cvbuilder.ui.work.WorkFragment"
        android:label="@string/title_work"
        tools:layout="@layout/fragment_work" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.bikram.cvbuilder.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>